tests/codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.method.missing.name/reader-method-missing-name.mon
;; TEST-ID: tests.codegen.reader-error.reader-method-missing-name
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/typeclass-data-layout
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected method name after 'method'
;; TEST-ATOM: atom.reader.error.reader.method.missing.name
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.method.missing.name
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected method name after 'method'
;; TEST-READER-PATH: reader.c:5125 parser.method
;; TEST-CODEGEN-PATH: diagnostic.parser.method
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:5125 Expected method name after 'method'
;; TEST-USES-ATOM: atom.reader.error.reader.method.missing.name
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.method
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/typeclass-data-layout/atom.reader.error.reader.method.missing.name
;; TEST-MENU-PATH: codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.method.missing.name
;; TEST-ATOM-LEAF: atom.reader.error.reader.method.missing.name
;; TEST-CLI-TARGET: codegen errors reader typeclass-data-layout

(module Main)
(method)
